--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 
 dist: xenial
@@ -8,7 +9,8 @@ arch:
 
 python:
   - 3.8
-
+install: pip install tox-travis
 script:
   - python setup.py install
   - python setup.py test 
+  - tox
